--- a/EJERCICIOS/ejercicio13.html
+++ b/EJERCICIOS/ejercicio13.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div  class="contenedor">
     <h1>QUE ES CSS</h1>
     <div class="parrafo1">
         <p>En el módulo Introducción al HTML , exponemos qué es el HTML y cómo se usa para definir documentos destinados
