--- a/EJERCICIOS/ejercicio17.html
+++ b/EJERCICIOS/ejercicio17.html
@@ -1,12 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProgramaYa</title>
     <link rel="stylesheet" href="ejercicio17.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+
+            <p class="logo">ProgramaYa</p>
+            <nav>
+
+                <a href="#">Sobre nosotos</a>
+                <a href="#">Nuestros Cursos</a>
+                <a href="#">Caracteristicas</a>
+            </nav>
+        </div>
+
+    </header>
+    <section id="hero">
+        <h1>Aprende a Programar <br>con los mejores</h1>
+        <button>APLICA YA!</button>
+
+    </section>
+
+    <section id="somos-proya">
+
+
+        <div class="container">
+
+            <div class="img-container"></div>
+            <h2>Somos ProgramaYa!</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque reprehenderit placeat ipsam quae magnam
+                nemo quod non. Quisquam architecto, cumque optio unde modi quod, autem adipisci culpa, iusto at aperiam.
+            </p>
+
+        </div>
+
+
+    </section>
+
+    <section id="nuestros-programas">
+        <div class="container">
+            <h2>Nuestros Programas</h2>
+            <div class="carta">
+                <h3>Programador Front-End</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora nam cum a vel repellendus aliquam
+                    nobis
+                    possimus et nostrum laborum dolores eos expedita, hic cumque neque ex, corporis aspernatur autem?
+                </p>
+                <form action="https://developer.mozilla.org/es/docs/Learn/Front-end_web_developer">
+                <button>Mas Info</button>
+            </form>
+            </div>
+            <div class="carta">
+                <h3>Programador Full-stack</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque commodi, est dolorem nihil iure ut
+                    hic
+                    nam perspiciatis quam velit similique veritatis nemo odit. Rerum tempora impedit modi suscipit quam!
+                </p>
+                <form action="https://blog.hubspot.es/website/que-es-desarrollador-full-stack">
+                <button>Mas Info</button>
+            </form>
+            </div>
+            <div class="carta">
+                <h3>Programador Python</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero architecto, doloribus quo itaque modi
+                    possimus fugiat a quia. Laudantium ad facere debitis quo mollitia velit accusantium molestiae
+
+
+                </p>
+                <form action="https://blog.hubspot.es/website/que-es-python">
+                <button>Mas Info</button>
+            </form>
+            </div>
+        </div>
+
+
+    </section>
+    <section id="caracteristicas">
+
+        <div class="container">
+            <ul>
+
+                <li>✅100 % online</li>
+                <li>✅Flexibilidad de horarios</li>
+                <li>✅Soporte 1:1</li>
+                <li>✅Asistencia financiera</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="aplica-ya">
+
+        <h2>Listo para Programar?</h2>
+        <button>APLICA YA!</button>
+    </section>
+
+    <FOoter>
+        <div class="container">
+            <P>&copy; ProgramaYa 2023</P>
+        </div>
+    </FOoter>
+
+
 </body>
+
 </html>
